css/settings.css
/* ... */
.fz-form-wrap .tagify__tag>div::before{
	box-shadow: 0 0 0 1.7em #F0F2F5 inset;
}
.fz-form-wrap .tagify__tag:focus div::before,
.fz-form-wrap .tagify__tag:hover:not([readonly]) div::before{
	box-shadow: 0 0 0 1.7em #E4E6E8 inset;
	left: 0;
	top: 0;
	right: 0;
	bottom: 0;
}
.fz-form-wrap .tagify__tag__removeBtn:hover+div::before{
	box-shadow: 0 0 0 1.7em #E4E6E8 inset!important;
}
.fz-form-wrap .tagify__tag__removeBtn:hover+div>span{
	opacity: 1;
}
.fz-form-wrap .tagify__tag__removeBtn{
	font-size: 20px;
	line-height: 1;
	width: 20px;
	height: 20px;
	color: #757575;
}
.fz-form-wrap .tagify__tag__removeBtn:hover{
	background: #D0D4D7;
	color: #757575;
}
.fz-form-wrap .tagify__tag__removeBtn::after{
	content: "\f335";
	font-family: 'dashicons';
	font-size: 20px;
	line-height: 1;
}

.no-data .help-text{
	font-weight: 500;
	padding-top: 0;
	padding-bottom: 16px;
}
.no-data .cta-text a{
	font-weight: 700;
	font-size: 16px;
}

.feedzy-header{
	background: #ffffff;
	padding: 32px 15px;
}
.feedzy-header .feedzy-container{
	display: flex;
	justify-content: space-between;
	align-items: center;
}
.feedzy-header .feedzy-logo{
	display: flex;
	align-items: center;
}
.feedzy-header .feedzy-logo .feedzy-version{
	padding-right: 27px;
	color: #0073AA;
	font-size: 14px;
	line-height: 17px;
	font-weight: 700;
}

.fz-content{
	padding-bottom: 22px;
}
.fz-content p{
	font-size: 16px;
	line-height: 24px;
	color: #050505;
	margin: 0;
}
.fz-content p a{
	display: inline-block;
	font-weight: 700;
	color: #4268CF;
	text-decoration: none;
}

/* FZ tab style start */
.fz-tabs-menu ul{
	display: flex;
	flex-wrap: wrap;
	border-bottom: 1px solid #D9D9D9;
}

.fz-tabs-menu ul li a {
	font-weight: 600;
	font-size: 16px;
	line-height: 19px;
	color: #050505;
	display: inline-block;
	padding: 15px 16px;
	text-decoration: none;
	position: relative;
	margin-bottom: 8px;
	-webkit-transition: all 0.3s ease-in-out;
	-moz-transition: all 0.3s ease-in-out;
	-o-transition: all 0.3s ease-in-out;
	transition: all 0.3s ease-in-out;
}

.fz-tabs-menu ul li {
	margin-bottom: 0;
}

.fz-tabs-menu ul li a:after{
	content: "";
	width: 100%;
	height: 4px;
	position: absolute;
	bottom: -8px;
	left: 0;
	background: #4268CF;
	opacity: 0;
	-webkit-transition: all 0.3s ease-in-out;
	-moz-transition: all 0.3s ease-in-out;
	-o-transition: all 0.3s ease-in-out;
	transition: all 0.3s ease-in-out;
}
.fz-tabs-menu ul li a:not(.active):hover{
	background: rgba(66, 104, 207, .1);
}
.fz-tabs-menu ul li a.active{
	color: #4268CF;
}
.fz-tabs-menu ul li a.active:after{
	opacity: 1;
}
.fz-tabs-menu ul li a .pro-label{
	font-size: 10px;
	line-height: 1;
	padding: 4px 7px;
	position: relative;
	top: -7px;
}
.fz-tabs-menu ul li a:focus {
	color: #4268CF;
}
.fz-tabs-menu ul li a:focus:after {
	opacity: 1;
}

.fz-tabs-content .fz-tab-content{
	display: none;
}
/* FZ tab style end */

.upgrade-alert{
	padding: 10px 0;
	background: #4268CF;
	text-align: center;
	font-size: 14px;
	line-height:  20px;
	color: #FFFFFF;
	position: relative;
}
.upgrade-alert a{
	font-weight: 700;
	color: #ffffff;
}
.upgrade-alert .remove-alert{
	position: absolute;
	right: 18px;
	top: 50%;
	margin-top: -12px;
	width: 24px;
	height: 24px;
	background: transparent;
	border: 0;
	color: #ffffff;
	font-size: 24px;
	line-height: 1;
	cursor: pointer;
	display: flex;
	align-items: center;
	justify-content: center;
	-webkit-border-radius: 24px;
	-moz-border-radius: 24px;
	border-radius: 24px;
	-webkit-transition: background 0.3s ease-in-out;
	-moz-transition: background 0.3s ease-in-out;
	-o-transition: background 0.3s ease-in-out;
	transition: background 0.3s ease-in-out;
}
.upgrade-alert .remove-alert:hover{
	background: #ffffff;
	color: #4268CF;
}

.key-value-item{
	display: flex;
	padding: 8px;
	background: #F0F2F5;
	margin-bottom: 24px;
}
.key-value-item .fz-form-group{
	width: 100%;
}
.key-value-item .key-value-arrow{
	width: 36px;
	flex-shrink: 0;
	text-align: center;
	padding-top: 15px;
	color: #757575;
	font-size: 20px;
	line-height: 1;
}
.key-value-item .remove-group{
	width: 40px;
	flex-shrink: 0;
	padding-top: 14px;
	padding-right: 6px;
	text-align: right;
}
.key-value-item .remove-group button{
	display: block;
	width: 20px;
	height: 20px;
	border: 0;
	cursor: pointer;
	margin-left: auto;
	background-color: transparent;
	background-image: url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 20 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3.73755 5.36111H17.0709M16.2375 5.36111L15.515 15.5638C15.4851 15.9878 15.297 16.3846 14.9885 16.6743C14.68 16.964 14.2741 17.125 13.8525 17.125H6.95588C6.53433 17.125 6.12844 16.964 5.81995 16.6743C5.51147 16.3846 5.32331 15.9878 5.29338 15.5638L4.57088 5.36111H16.2375ZM8.73755 8.72223V13.7639V8.72223ZM12.0709 8.72223V13.7639V8.72223ZM12.9042 5.36111V2.84028C12.9042 2.61742 12.8164 2.40369 12.6601 2.24611C12.5039 2.08853 12.2919 2 12.0709 2H8.73755C8.51653 2 8.30457 2.08853 8.14829 2.24611C7.99201 2.40369 7.90422 2.61742 7.90422 2.84028V5.36111H12.9042Z' stroke='%234268CF' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
	background-position: center center;
}
/* ... */

